# test5

./: .env  Cargo.toml
src/: bot.rs  config.rs  helper.rs  i18n.rs  input_filter.rs  keyboards.rs  main.rs  queue.rs  rate_limit.rs  rules_ban.rs  shutdown.rs  sold_store.rs  worker.rs
