[package]
name = "ULP_TELEGRAM_BOT"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.12", features = ["macros"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
regex = "1"
dashmap = "5"
governor = "0.6"
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
rocksdb = "0.22"
xxhash-rust = { version = "0.8", features = ["xxh3"] }